@@ -68,6 +68,7 @@ from toolkit.api_parser.retarus.retarus import RetarusParser
 from toolkit.api_parser.vectra.vectra import VectraParser
 from toolkit.api_parser.apex.apex import ApexParser
 from toolkit.api_parser.signalsciences_ngwaf.signalsciences_ngwaf import SignalSciencesNgwafParser
+from toolkit.api_parser.gatewatcher_alerts.gatewatcher_alerts import GatewatcherAlertsParser
 
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
@@ -116,7 +117,8 @@ PARSER_LIST = {
     "retarus": RetarusParser,
     "vectra": VectraParser,
     "apex": ApexParser,
-    "signalsciences_ngwaf": SignalSciencesNgwafParser
+    "signalsciences_ngwaf": SignalSciencesNgwafParser,
+    "gatewatcher_alerts": GatewatcherAlertsParser
 }
 
 class ParserDoesNotExist(Exception):
